# hashabler

./: .travis.yml  CHANGELOG.markdown  LICENSE  README.markdown  core.hs  hashable-fnv1a.cabal  hashabler.cabal
benchmarks/: Dev.hs  Main.hs  Realistic.hs
naughtybits/: sipround_x86_64.S
src/: HashableGenerics.hs  MachDeps.hs  PrimUtilities.hs
src/Data/: Hashabler.hs
src/Data/Hashable/: FNV1a.hs
src/Data/Hashabler/: Internal.hs  SipHash.hs
tests/: Consistency.hs  Main.hs
tests/Vectors/: FNV.hs  SipHash.hs
viz/: Main.hs
